--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Amardeep Singh"
-  avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/deep.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science and Machine Learning practitioner"
   location         : "New Zealand"
   email            :
