--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name"
+title                    : "AMARDEEP SINGH"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "AMARDEEP SINGH"
