--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "AMARDEEP SINGH"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "Amardeep Singh"
 description              : "AMARDEEP SINGH"
-url                      : "https://1asingh.github.io"
+url                      : "https://asingh.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
