--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "AMARDEEP SINGH"
 title_separator          : "-"
 name                     : "Amardeep Singh"
 description              : "AMARDEEP SINGH"
-url                      : "https://asingh.github.io"
+url                      : "https://1asingh.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
