--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Deep's project"
+  - title: "Deep's Portfolio"
     url: /data-wrangling/
-  - title: "Deep's tutorials"
-    url: /deep-tutorial/
+  #- title: "Deep's tutorials"
+  #  url: /deep-tutorial/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
